Bug 522301 - [SonarLint] Performance - Method invokes inefficient Number constructor; use static valueOf instead
Change-Id: Icd27a4fee02e15f90f128e2986f5465b8c8019b7
Signed-off-by: Martin Karpisek <martin.karpisek@gmail.com>