@@ -11,7 +11,6 @@
 package org.eclipse.pde.internal.core.text;
 
 import java.util.HashMap;
-
 import org.eclipse.pde.internal.core.util.PDETextHelper;
 
 public class DocumentTextNode extends DocumentXMLNode implements IDocumentTextNode {
@@ -21,11 +20,11 @@ public class DocumentTextNode extends DocumentXMLNode implements IDocumentTextNo
 	protected static final HashMap<Character, String> SUBSTITUTE_CHARS = new HashMap<>(5);
 
 	static {
-		SUBSTITUTE_CHARS.put(new Character('&'), "&amp;"); //$NON-NLS-1$
-		SUBSTITUTE_CHARS.put(new Character('<'), "&lt;"); //$NON-NLS-1$
-		SUBSTITUTE_CHARS.put(new Character('>'), "&gt;"); //$NON-NLS-1$
-		SUBSTITUTE_CHARS.put(new Character('\''), "&apos;"); //$NON-NLS-1$
-		SUBSTITUTE_CHARS.put(new Character('\"'), "&quot;"); //$NON-NLS-1$
+		SUBSTITUTE_CHARS.put(Character.valueOf('&'), "&amp;"); //$NON-NLS-1$
+		SUBSTITUTE_CHARS.put(Character.valueOf('<'), "&lt;"); //$NON-NLS-1$
+		SUBSTITUTE_CHARS.put(Character.valueOf('>'), "&gt;"); //$NON-NLS-1$
+		SUBSTITUTE_CHARS.put(Character.valueOf('\''), "&apos;"); //$NON-NLS-1$
+		SUBSTITUTE_CHARS.put(Character.valueOf('\"'), "&quot;"); //$NON-NLS-1$
 	}
 
 	private transient int fOffset;
